k8s/message-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-client-depl
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-client-service
  template:
    metadata:
      labels:
        app: message-client-service
    spec:
      containers:
        - name: message-client-service
          image: dayanmendis/rabbit_masstransit_client:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: message-client-clusterip-srv
  namespace: my-namespace
spec:
  type: ClusterIP
  selector:
    app: message-client-service
  ports:
  - name: message-client-service
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: message-client-loadbalancer
  namespace: my-namespace
spec:
  type: LoadBalancer
  selector:
    app: message-client-service
  ports:
  - name: message-client-port
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: message-client-node-port
  namespace: my-namespace
spec:
  type: NodePort
  selector:
    app: message-client-service
  ports:
    - name: message-client-port
      protocol: TCP
      port: 80
      targetPort: 80
